# koakuma

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  data.rs  err.rs  gui.rs  journal.rs  main.rs  mft.rs  privileges.rs  volumes.rs
src/gui/: filesystem.rs  mod.rs  task.rs  treemap.rs
src/mft/: mod.rs  read_volume.rs  stream.rs  sys.rs
