[package]
name = "koakuma"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2018"
description = "Finds big files and folders"

[profile.release]
lto = true

[dependencies.clap]
version = "2"

[dependencies.indicatif]
version = "0.15"

[dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "handleapi",
    "ioapiset",
    "impl-default",
    "processthreadsapi",
    "securitybaseapi",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
]