[package]
name = "koakuma"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2021"
description = "Finds big files and folders"

[features]
cli = ["clap", "indicatif"]
gui = ["egui", "eframe", "winres"]
default = ["gui"]

[profile.release]
# lto = true
# debug = true

[build-dependencies]
winres = { version="0.1", optional=true }

[dependencies]
egui = { version = "0.18", optional=true }
eframe = { version = "0.18", optional=true }

clap = { version = "3", optional=true }
indicatif = { version = "0.16", optional=true }
smallvec = "1.8.0"

[dependencies.windows]
version = "0.37"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
