[package]
name = "koakuma"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2021"
description = "Finds big files and folders"

[features]
cli = ["clap", "indicatif"]
gui = ["egui", "eframe", "winres", "treemap", "humansize", "random_color"]
default = ["gui"]

[profile.release]
lto = true
# debug = true

[build-dependencies]
winres = { version="0.1", optional=true }

[dependencies]
egui = { version = "0.18", optional=true }
eframe = { version = "0.18", optional=true }
treemap = { version = "0.3.2", optional=true }
humansize = { version = "1.1.1", optional=true }
random_color = { version = "0.6", optional=true }

clap = { version = "3", optional=true }
indicatif = { version = "0.16", optional=true }

[dependencies.windows]
version = "0.38"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
